--- a/src/Jenkinsfile
+++ b/src/Jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
                         }
                     } else {
                         dir(REPO_DIR) {
-                            git pull
+                            sh 'git pull'
                         }
                     }
                 }
