--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "vue": "^3.4.38",
     "core-js": "^3.8.3",
     "vue-router": "^4.0.3"
   },
@@ -20,7 +21,6 @@
     "@vue/cli-service": "~5.0.0",
     "@vue/compiler-sfc": "^3.4.38",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue": "^3.4.38"
+    "eslint-plugin-vue": "^8.0.3"
   }
 }
