--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,39 +2,11 @@ name: Vue.js CI/CD
 
 on:
   push:
-    branches: [ develop ]
-  pull_request:
     branches: [ main ]
 
 jobs:
-  # Este job se ejecuta en develop y en PRs a main
-  quality-check:
+  deploy-production:
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        node-version: [18.x]
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-
-    - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-
-    - name: Install dependencies
-      run: npm ci
-
-    - name: Run linting
-      run: npm run lint
-
-  # Este job solo se ejecuta al hacer push a main (después de merge)
-  deploy-prod:
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     
     steps:
     - name: Checkout code
@@ -52,7 +24,26 @@ jobs:
     - name: Build application
       run: npm run build
 
-    - name: Deploy to Production
+    - name: Debug - Show build files
+      run: |
+        echo "Build directory contents:"
+        ls -la dist/
+        echo "---"
+        du -sh dist/
+
+    - name: Prepare server directory
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.SERVER_HOST }}
+        username: ${{ secrets.SERVER_USERNAME }}
+        key: ${{ secrets.SERVER_SSH_KEY }}
+        script: |
+          echo "Preparing deployment directory..."
+          sudo mkdir -p /var/www/vue-app-prod
+          sudo chown -R ubuntu:ubuntu /var/www/vue-app-prod
+          ls -la /var/www/vue-app-prod/
+
+    - name: Deploy with SCP (fixed)
       uses: appleboy/scp-action@v0.1.3
       with:
         host: ${{ secrets.SERVER_HOST }}
@@ -61,14 +52,22 @@ jobs:
         source: "dist/"
         target: "/var/www/vue-app-prod"
         overwrite: true
+        strip_components: 1
 
-    - name: Finalize deployment
+    - name: Verify deployment
       uses: appleboy/ssh-action@v1.0.0
       with:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USERNAME }}
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
+          echo "Verifying deployed files:"
+          ls -la /var/www/vue-app-prod/
+          echo "---"
+          echo "Detailed file list:"
+          find /var/www/vue-app-prod -type f | head -20
+          echo "---"
           sudo chown -R www-data:www-data /var/www/vue-app-prod
+          sudo chmod -R 755 /var/www/vue-app-prod
           sudo systemctl reload nginx
-          echo "✅ Production deployment completed!"
+          echo "Deployment verified and completed!"
